--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,10 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 </body>
+<footer>
+    <p align="center">
+        &copy; Copyright 2019 CHALLAL Mohamed, DU Paul, FAURE--GIOVAGNOLI Pierre, LE CONTE Alexis<br/>
+        Sources disponibles sur <a href="https://github.com/PJK136/elice">Github</a>
+    </p>
+</footer>
 </html>
