--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 <footer>
     <p align="center">
         &copy; Copyright 2019 CHALLAL Mohamed, DU Paul, FAURE--GIOVAGNOLI Pierre, LE CONTE Alexis<br/>
-        Sources disponibles sur <a href="https://github.com/PJK136/elice">Github</a>
+        Version 0.1.0b – Sources disponibles sur <a href="https://github.com/PJK136/elice">Github</a>
     </p>
 </footer>
 </html>
